Implement UserId and TypeId class, add integration tests for Schedule